--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ DerivedData/
 .swiftpm/config/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+
+/Sources/ebnf-citron/EBNFParser.swift
+.swiftpm
